--- a/models/ntorq125.html
+++ b/models/ntorq125.html
@@ -4,66 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TVS Ntorq 125 | Tirumala TVS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-
-    <nav class="nav-container">
-        <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-        <div class="nav-links">
-            <a href="../index.html">Home</a>
-            <a href="../models.html">Inventory</a>
-            <a href="../contacts.html" style="color: var(--tvs-red);">Book Test Ride</a>
+    <nav class="navbar">
+        <div class="container nav-content">
+            <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
+            <div class="menu-toggle" onclick="toggleMenu()"><span class="bar"></span><span class="bar"></span><span class="bar"></span></div>
+            <div class="nav-links" id="navMenu">
+                <a href="../index.html">Home</a>
+                <a href="../models.html">Inventory</a>
+                <a href="../index.html#contact" class="btn-nav-contact">Contact Us</a>
+            </div>
         </div>
     </nav>
 
-    <section class="model-hero">
-        <div class="hero-text">
-            <span class="hero-tag" style="background: #ffcc00; color: #333;">GEN Z CHOICE</span>
-            <h1>TVS Ntorq 125</h1>
-            <h3>Play Smart. Ride Hard.</h3>
-            <p>
-                India's first Bluetooth connected scooter. Built for the youth with Stealth Aircraft inspired design, 
-                a powerful 3-valve engine, and a signature sporty exhaust note.
-            </p>
-            <div class="hero-btns">
-                <a href="../contacts.html" class="btn-primary">📅 Book Test Ride</a>
-                <a href="https://wa.me/919964946512" class="btn-secondary">💬 WhatsApp</a>
+    <div class="model-hero">
+        <div class="hero-text-side">
+            <span class="model-tag" style="background:#d00000;">PLAY SMART</span>
+            <h1 class="model-title">TVS Ntorq 125</h1>
+            <p class="section-subtitle">India's First Connected Scooter. Inspired by Stealth Aircraft design.</p>
+            <div class="model-price">₹ 84,536* <br><span>(Starting Ex-Showroom)</span></div>
+            <div style="display: flex; gap: 15px; flex-wrap: wrap;">
+                <a href="https://wa.me/919964946512?text=Book%20Test%20Ride%20Ntorq" class="btn btn-primary">Book Test Ride 🏁</a>
             </div>
         </div>
-        <div class="hero-image">
+        <div class="hero-img-side">
             <img src="../assets/ntorq.jpg" alt="TVS Ntorq" onerror="this.src='https://placehold.co/800x600?text=Ntorq+125'">
         </div>
-    </section>
-
-    <div class="stats-bar">
-        <div class="stat-box"><h4>125 cc</h4><p>3-Valve Engine</p></div>
-        <div class="stat-box"><h4>9.38 PS</h4><p>Max Power</p></div>
-        <div class="stat-box"><h4>95 km/h</h4><p>Top Speed</p></div>
-        <div class="stat-box"><h4>Smart</h4><p>Connected</p></div>
     </div>
 
-    <section class="info-section">
-        <div class="section-head"><h2>Racing DNA Features</h2></div>
-        <div class="features-grid">
-            <div class="feature-card"><span class="feature-icon">🎮</span><h4>Gaming Console</h4><p>First scooter with a console that tracks Lap Times, Top Speed, and 0-60 timing.</p></div>
-            <div class="feature-card"><span class="feature-icon">🔊</span><h4>Sporty Sound</h4><p>Unique exhaust note that sounds like a sportbike, not a scooter.</p></div>
-            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Engine Kill Switch</h4><p>First-in-segment Engine Kill Switch for traffic convenience.</p></div>
-            <div class="feature-card"><span class="feature-icon">📱</span><h4>Bluetooth</h4><p>Caller ID, SMS alerts, and Last Parked Location assist.</p></div>
+    <div class="spec-bar-dark">
+        <div class="spec-bar-grid">
+            <div class="dark-spec-item"><h4>125cc</h4><p>3-Valve Engine</p></div>
+            <div class="dark-spec-item"><h4>9.38</h4><p>PS Power</p></div>
+            <div class="dark-spec-item"><h4>0-60</h4><p>in 9 Seconds</p></div>
+            <div class="dark-spec-item"><h4>BT</h4><p>SmartXonnect</p></div>
         </div>
-    </section>
+    </div>
 
-    <section class="info-section" style="background-color: #f9f9f9;">
-        <div class="section-head"><h2>Technical Specifications</h2></div>
-        <div class="specs-container">
-            <div class="spec-row"><div class="spec-key">Engine</div><div class="spec-val">124.8 cc, 3 Valve, CVTi-REVV</div></div>
-            <div class="spec-row"><div class="spec-key">Power</div><div class="spec-val">9.38 PS @ 7000 rpm</div></div>
-            <div class="spec-row"><div class="spec-key">Torque</div><div class="spec-val">10.5 Nm @ 5500 rpm</div></div>
-            <div class="spec-row"><div class="spec-key">Tyres</div><div class="spec-val">12-inch Tubeless Alloy Wheels</div></div>
-            <div class="spec-row"><div class="spec-key">Fuel Tank</div><div class="spec-val">5.8 Liters (External Fill)</div></div>
+    <div class="feature-section container">
+        <div class="feature-row">
+            <div class="feature-txt">
+                <h3>Gaming Console Cluster</h3>
+                <p>View Lap times, Top speed recorder, Navigation assistance, and Caller ID on your speedometer. It's not just a scooter, it's a machine.</p>
+            </div>
+            <div class="feature-img"><img src="../assets/ntorq_console.jpg" alt="Ntorq Console" onerror="this.src='https://placehold.co/600x400?text=Gaming+Console'"></div>
         </div>
-    </section>
+        <div class="feature-row">
+            <div class="feature-txt">
+                <h3>Stealth Aircraft Design</h3>
+                <p>Sharp edges, aggressive styling, and the signature 'T' tail lamp make the Ntorq unmistakable on the road.</p>
+            </div>
+            <div class="feature-img"><img src="../assets/ntorq_design.jpg" alt="Ntorq Design" onerror="this.src='https://placehold.co/600x400?text=Stealth+Design'"></div>
+        </div>
+    </div>
+    
+    <div class="section-padding bg-light text-center">
+        <h2 style="margin-bottom: 20px;">Ready to Play?</h2>
+        <a href="https://wa.me/919964946512?text=Get%20Quote%20Ntorq" class="btn btn-whatsapp">Get On-Road Price 💬</a>
+    </div>
 
-    <footer><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></footer>
+    <footer class="footer"><div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div></footer>
+    <script>function toggleMenu() { document.getElementById("navMenu").classList.toggle("active"); }</script>
 </body>
 </html>
