--- a/models/xl100.html
+++ b/models/xl100.html
@@ -3,67 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS XL100 | Tirumala TVS</title>
+    <title>TVS XL100 Heavy Duty | Tirumala TVS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-
-    <nav class="nav-container">
-        <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-        <div class="nav-links">
-            <a href="../index.html">Home</a>
-            <a href="../models.html">Inventory</a>
-            <a href="../contacts.html" style="color: var(--tvs-red);">Book Test Ride</a>
+    <nav class="navbar">
+        <div class="container nav-content">
+            <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
+            <div class="menu-toggle" onclick="toggleMenu()"><span class="bar"></span><span class="bar"></span><span class="bar"></span></div>
+            <div class="nav-links" id="navMenu">
+                <a href="../index.html">Home</a>
+                <a href="../models.html">Inventory</a>
+                <a href="../index.html#contact" class="btn-nav-contact">Contact Us</a>
+            </div>
         </div>
     </nav>
 
-    <section class="model-hero">
-        <div class="hero-text">
-            <span class="hero-tag" style="background: #555;">HEAVY DUTY</span>
-            <h1>TVS XL100</h1>
-            <h3>The Multi-Utility King</h3>
-            <p>
-                The most reliable partner for your business. Built tough with a payload capacity of 130kg 
-                and featuring i-Touch Start for silent, instant ignition.
-            </p>
-            <div class="hero-btns">
-                <a href="../contacts.html" class="btn-primary">📅 Book Test Ride</a>
-                <a href="https://wa.me/919964946512" class="btn-secondary">💬 WhatsApp</a>
+    <div class="model-hero">
+        <div class="hero-text-side">
+            <span class="model-tag" style="background:#555;">MULTI-UTILITY</span>
+            <h1 class="model-title">XL100 Heavy Duty</h1>
+            <p class="section-subtitle">The most trusted workhorse. Now with i-Touch Start and 15% more mileage.</p>
+            <div class="model-price">₹ 46,000* <br><span>(Starting Ex-Showroom)</span></div>
+            <div style="display: flex; gap: 15px; flex-wrap: wrap;">
+                <a href="https://wa.me/919964946512?text=Book%20XL100" class="btn btn-primary">Book Now 📦</a>
             </div>
         </div>
-        <div class="hero-image">
-            <img src="../assets/xl100.jpg" alt="TVS XL100" onerror="this.src='https://placehold.co/800x600?text=XL100'">
+        <div class="hero-img-side">
+            <img src="../assets/xl100.jpg" alt="TVS XL100" onerror="this.src='https://placehold.co/800x600?text=XL100+Heavy+Duty'">
         </div>
-    </section>
-
-    <div class="stats-bar">
-        <div class="stat-box"><h4>99.7 cc</h4><p>Engine</p></div>
-        <div class="stat-box"><h4>130 kg</h4><p>Payload</p></div>
-        <div class="stat-box"><h4>Silent</h4><p>Start</p></div>
-        <div class="stat-box"><h4>15% +</h4><p>Mileage</p></div>
     </div>
 
-    <section class="info-section">
-        <div class="section-head"><h2>Built for Business</h2></div>
-        <div class="features-grid">
-            <div class="feature-card"><span class="feature-icon">👆</span><h4>i-Touch Start</h4><p>Integrated starter generator for a silent and instant start.</p></div>
-            <div class="feature-card"><span class="feature-icon">💪</span><h4>Heavy Duty</h4><p>Robust chassis designed to carry heavy loads effortlessly.</p></div>
-            <div class="feature-card"><span class="feature-icon">🧼</span><h4>Easy Clean</h4><p>Detachable rear seat makes it easy to load goods and clean.</p></div>
-            <div class="feature-card"><span class="feature-icon">🔌</span><h4>Mobile Charging</h4><p>Charge your mobile phone on the go while you work.</p></div>
+    <div class="spec-bar-dark">
+        <div class="spec-bar-grid">
+            <div class="dark-spec-item"><h4>99.7cc</h4><p>Engine</p></div>
+            <div class="dark-spec-item"><h4>130kg</h4><p>Payload</p></div>
+            <div class="dark-spec-item"><h4>i-Touch</h4><p>Silent Start</p></div>
+            <div class="dark-spec-item"><h4>Rugged</h4><p>Chassis</p></div>
         </div>
-    </section>
+    </div>
+    
+    <div class="section-padding bg-light text-center">
+        <h2 style="margin-bottom: 20px;">Your Business Partner</h2>
+        <a href="https://wa.me/919964946512?text=Get%20Quote%20XL100" class="btn btn-whatsapp">Get On-Road Price 💬</a>
+    </div>
 
-    <section class="info-section" style="background-color: #f9f9f9;">
-        <div class="section-head"><h2>Technical Specifications</h2></div>
-        <div class="specs-container">
-            <div class="spec-row"><div class="spec-key">Engine</div><div class="spec-val">99.7 cc, 4 Stroke</div></div>
-            <div class="spec-row"><div class="spec-key">Power</div><div class="spec-val">4.4 PS @ 6000 rpm</div></div>
-            <div class="spec-row"><div class="spec-key">Torque</div><div class="spec-val">6.5 Nm @ 3500 rpm</div></div>
-            <div class="spec-row"><div class="spec-key">Starting</div><div class="spec-val">Kick & Electric Start</div></div>
-            <div class="spec-row"><div class="spec-key">Weight</div><div class="spec-val">89 kg</div></div>
-        </div>
-    </section>
-
-    <footer><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></footer>
+    <footer class="footer"><div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div></footer>
+    <script>function toggleMenu() { document.getElementById("navMenu").classList.toggle("active"); }</script>
 </body>
 </html>
